--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LocationActivity" >
+    tools:context=".activity.LocationActivity" >
 
     <fragment
         android:id="@+id/map"
@@ -25,79 +25,110 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/map_icon_disaster"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:background="@drawable/disaster"/>
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_toRightOf="@id/map_icon_disaster"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="10dp"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:textColor="@color/colorPrimary"
-                    android:text="Type: Landslide"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:textColor="@color/colorPrimary"
-                    android:text="Date: 22/05/2019 - 18:34"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:textColor="@color/colorPrimary"
-                    android:text="Latitude: -45454155"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:textColor="@color/colorPrimary"
-                    android:text="Longitude: 789879"/>
+                <ImageView
+                    android:id="@+id/map_icon_disaster"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:background="@drawable/disaster"/>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/rounded_corner">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:src="@mipmap/person"
-                        android:layout_marginTop="3dp"
-                        android:layout_marginBottom="3dp"
-                        android:layout_marginLeft="1dp"
-                        android:layout_marginRight="1dp"></ImageView>
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_toRightOf="@id/map_icon_disaster"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:orientation="vertical">
 
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:textColor="@color/colorPrimaryLight"
-                        android:paddingRight="5dp"
-                        android:text="10"/>
+                        android:id="@+id/tv_topic_location"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:textColor="@color/colorPrimary"
+                        android:text="Topic"/>
+
+                    <TextView
+                        android:id="@+id/tv_datetime_location"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:textColor="@color/colorPrimary"
+                        android:text="Date: 22/05/2019 - 18:34"/>
+
+                    <TextView
+                        android:id="@+id/tv_latitude_location"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:textColor="@color/colorPrimary"
+                        android:text="Latitude: -45454155"/>
+
+                    <TextView
+                        android:id="@+id/tv_longitude_location"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:textColor="@color/colorPrimary"
+                        android:text="Longitude: 789879"/>
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1">
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/rounded_corner">
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:src="@mipmap/person"
+                                android:layout_marginTop="3dp"
+                                android:layout_marginBottom="3dp"
+                                android:layout_marginLeft="1dp"
+                                android:layout_marginRight="1dp"></ImageView>
+
+                            <TextView
+                                android:id="@+id/tv_people_location"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:gravity="center"
+                                android:textColor="@color/colorPrimaryLight"
+                                android:paddingRight="5dp"
+                                android:text="10"/>
+
+                        </LinearLayout>
+
+                        <Button
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Imagens"
+                            android:textColor="@color/colorAccent"
+                            android:background="@drawable/rounded"
+                            android:layout_alignParentRight="true"
+                            android:onClick="showImages"/>
+                    </RelativeLayout>
 
                 </LinearLayout>
 
-
             </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_images"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"/>
 
         </LinearLayout>
 
